--- a/package.json
+++ b/package.json
@@ -4,13 +4,22 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "vue": "^3.2.6"
   },
   "devDependencies": {
+    "@babel/core": "^7.15.5",
+    "@storybook/addon-actions": "^6.3.8",
+    "@storybook/addon-essentials": "^6.3.8",
+    "@storybook/addon-links": "^6.3.8",
+    "@storybook/vue3": "^6.3.8",
     "@vue/cli-service": "~5.0.0-beta.4",
-    "@vue/compiler-sfc": "^3.2.6"
+    "@vue/compiler-sfc": "^3.2.6",
+    "babel-loader": "^8.2.2",
+    "vue-loader": "^16.8.1"
   }
 }
